formatting and code style.